# coderacer2

./: CMakeLists.txt  README.md  sonar-project.properties
.github/workflows/: build.yml
.pipelines/: develop.yaml  pr_develop.yaml
src/.github/workflows/: build.yml
src/track2/: crc32.c  crc32.h
track2/: code_with_bugs.c  main.c  test.c
